fix: long string will cause link overflow(#master)

--- a/components/layout/layout.less
+++ b/components/layout/layout.less
@@ -25,7 +25,6 @@ body {
   min-height: 100vh !important;
 }
 
-
 :global(.right5),
 :global(.right10),
 :global(.right20) {
@@ -177,4 +176,8 @@ details {
   color: red;
   line-height: 1.2em;
   font-family: consolas;
+}
+
+a {
+  word-break: break-all;
 }
